# Px4_Autopilot

./: .gitignore  QUICK_START.md  README.md  SECURE_WORLD_MISSION_VERIFICATION.md  TESTING_GUIDE.md  TESTING_SUMMARY.md  THREAT_MODEL_AND_SOLUTION.md  mission.sha256  mission.sig  quick_test.sh  read_logs.py  test_secure_world.sh
.claude/: settings.local.json
Tools/: generate_keypair.py  mission_hash.py  mission_hash_drone_test.c  mission_sign.py  sig.py  test_hash.py  test_mission.plan
boards/px4/sitl/: default.px4board
msg/: CMakeLists.txt  PositionHashChain.msg  WpHashChain.msg
optee_ta/mission_ta/: .ta.ld.d  .ta_mission.o.cmd  .ta_mission.o.d  .user_ta_header.o.cmd  .user_ta_header.o.d  8aaaf200-2450-11e4-abe2-0002a5d5c51b.dmp  8aaaf200-2450-11e4-abe2-0002a5d5c51b.elf  8aaaf200-2450-11e4-abe2-0002a5d5c51b.map  8aaaf200-2450-11e4-abe2-0002a5d5c51b.stripped.elf  8aaaf200-2450-11e4-abe2-0002a5d5c51b.ta  Makefile  sub.mk  ta_mission.c  ta_mission_defines.h  user_ta_header_defines.h
src/lib/optee_mission_client/: CMakeLists.txt  mission_client.c  mission_client.h
src/modules/commander/HealthAndArmingChecks/: CMakeLists.txt  HealthAndArmingChecks.hpp
src/modules/commander/HealthAndArmingChecks/checks/: missionHashCheck.cpp  missionHashCheck.hpp
src/modules/logger/: logged_topics.cpp
src/modules/position_chain/: CMakeLists.txt  Kconfig  PositionChain.cpp  PositionChain.hpp  position_chain_main.cpp
src/modules/simulation/gz_plugins/: CMakeLists.txt
src/modules/wp_hash_chain/: CMakeLists.txt  Kconfig  README.md  WpHashChain.cpp  WpHashChain.hpp  wp_hash_chain_main.cpp
